--- a/style.css
+++ b/style.css
@@ -1,30 +1,40 @@
 
 h1 {
-  color: orange;
-  float: left;
+  background-color: orchid;
+  text-align: center;
+  color: #0026ff;
+ 
 }
 
 
 #logo {
   width: 100px;
-  margin-left: 100px;
+ 
 }
 
 #left {
-  margin: 20px 30px;
-  box-sizing: 20px;
-  width: 100px;
+  float: left;
+  width: 80px;
+  padding: 50px;
 }
 
 #middle {
-  margin: 5px 10px;
-  width: 100px;
+  float: left;
+  width: 80px;
+  padding: 50px;
 }
 
 
 #right {
-  margin: 20px 30px;
-  width: 100px;
+  float: left;
+  width: 80px;
+  padding: 50px;
+}
+
+#image-holder {
+  content: "";
+  clear: both;
+  display: table;
 }
 
 #result{
